--- a/error_pages/413.html
+++ b/error_pages/413.html
@@ -21,7 +21,7 @@
   </style>
 </head>
 <body>
-  <h1>404 Page Not Found</h1>
-  <p>The page you requested could not be found.</p>
+  <h1>413 Request Entity Too Large</h1>
+  <p> The size of a client's request exceeds the server's file size limit.</p>
 </body>
 </html>
