--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -7,7 +7,7 @@
             <input type="submit" value="Submit" />
         </form>
 
-        <h1>POST multipart</h1>
+        <h1>POST multipart/form-data</h1>
         <form method="post" enctype="multipart/form-data">
             <input type="text" name="name" />
             <input type="file" name="file" />
