--- a/error_pages/404.html
+++ b/error_pages/404.html
@@ -21,7 +21,7 @@
   </style>
 </head>
 <body>
-  <h1>404 Error - Page Not Found</h1>
+  <h1>404 Page Not Found</h1>
   <p>The page you requested could not be found.</p>
 </body>
 </html>
