--- a/error_pages/413.html
+++ b/error_pages/413.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>404 Error - Page Not Found</title>
+  <title>413 Request Entity Too Large</title>
   <style>
     body {
       font-family: Arial, sans-serif;
